tests/ui/impl-trait/in-trait/signature-mismatch.failure.stderr
error[E0477]: the type `impl Future<Output = Vec<u8>>` does not fulfill the required lifetime
  --> $DIR/signature-mismatch.rs:77:10
   |
LL |     ) -> impl Future<Output = Vec<u8>> {
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: type must outlive the lifetime `'a` as defined here as required by this binding
  --> $DIR/signature-mismatch.rs:73:32
   |
LL |     fn async_fn_reduce_outlive<'a, 'b, T>(
   |                                ^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0477`.
